--- a/src/componenets/Navigation/Navigation.css
+++ b/src/componenets/Navigation/Navigation.css
@@ -8,7 +8,7 @@ ul {
   gap: 2rem;
 }
 nav .nav-section {
-  padding: 3rem 2rem;
+  padding: 2rem 1rem;
   display: flex;
   gap: 1rem;
   border-left: 1px solid var(--border-color);
@@ -84,10 +84,7 @@ nav .nav-section {
   }
 
   #nav-link-section {
-    flex-basis: calc(100% * 0.25);
-  }
-
-  #nav-link-section {
     flex-basis: calc(100% / 3);
+    gap: 3rem;
   }
 }
